// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Grid should render grid 1`] = `
<div
  className="Grid__Grid-gDLjRO eNXUjX"
>
  
</div>
`;

exports[`Grid should render grid with cell 1`] = `
<div
  className="Grid__Grid-gDLjRO carhOg"
>
  <div
    className="Cell__Cell-tAjrW dskkMt"
  >
    Content
  </div>
</div>
`;
